--- a/index.html
+++ b/index.html
@@ -6,27 +6,26 @@
 
         <!-- Meta -->
         <!-- Basic Meta-->
-        <title>Ohmyfood !</title>
+        <title>Ohmyfood ! - Home</title>
         <meta name="description" content="Composez vos propres menus et réduisez votre temps d’attente dans les
         restaurants.">
         <meta name="author" content="Ohmyfood">
 
         <!-- Facebook Meta -->
-        <meta property="og:title" content="Ohmyfood !">
+        <meta property="og:title" content="Ohmyfood ! - Home">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://www.ohmyfood.com">
+        <meta property="og:url" content="https://ohmyfood.xetaravel.com">
         <meta property="og:description" content="Composez vos propres menus et réduisez votre temps d’attente dans les
         restaurants.">
-        <meta property="og:image" content="https://www.ohmyfood.com/images/logo/ohmyfood.png">
+        <meta property="og:image" content="https://ohmyfood.xetaravel.com/images/logo/ohmyfood.png">
 
         <!-- Twitter Meta -->
         <meta property="twitter:card" content="summary">
-        <meta property="twitter:site" content="Ohmyfood !">
-        <meta property="twitter:title" content="Ohmyfood !">
-        <meta property="twitter:url" content="https://www.ohmyfood.com">
-        <meta property="twitter:image" content="https://www.ohmyfood.com/images/logo/ohmyfood.png">
-        <meta property="twitter:description" content="Composez vos propres menus et réduisez votre temps d’attente dans les
-        restaurants.">
+        <meta property="twitter:site" content="Ohmyfood">
+        <meta property="twitter:title" content="Ohmyfood ! - Home">
+        <meta property="twitter:url" content="https://ohmyfood.xetaravel.com">
+        <meta property="twitter:image" content="https://ohmyfood.xetaravel.com/images/logo/ohmyfood.png">
+        <meta property="twitter:description" content="Composez vos propres menus et réduisez votre temps d’attente dans les restaurants.">
 
         <!-- Font Awesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
