Update meta logo & title

--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 
         <!-- Meta -->
         <!-- Basic Meta-->
-        <title>Ohmyfood ! - Home</title>
+        <title>Ohmyfood !</title>
         <meta name="description" content="Composez vos propres menus et réduisez votre temps d’attente dans les
         restaurants.">
         <meta name="author" content="Ohmyfood">
 
         <!-- Facebook Meta -->
-        <meta property="og:title" content="Ohmyfood ! - Home">
+        <meta property="og:title" content="Ohmyfood !">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://ohmyfood.xetaravel.com">
         <meta property="og:description" content="Composez vos propres menus et réduisez votre temps d’attente dans les
         restaurants.">
-        <meta property="og:image" content="https://ohmyfood.xetaravel.com/images/logo/ohmyfood.png">
+        <meta property="og:image" content="https://ohmyfood.xetaravel.com/images/logo/ohmyfood_color.png">
 
         <!-- Twitter Meta -->
         <meta property="twitter:card" content="summary">
         <meta property="twitter:site" content="Ohmyfood">
-        <meta property="twitter:title" content="Ohmyfood ! - Home">
+        <meta property="twitter:title" content="Ohmyfood !">
         <meta property="twitter:url" content="https://ohmyfood.xetaravel.com">
-        <meta property="twitter:image" content="https://ohmyfood.xetaravel.com/images/logo/ohmyfood.png">
+        <meta property="twitter:image" content="https://ohmyfood.xetaravel.com/images/logo/ohmyfood_color.png">
         <meta property="twitter:description" content="Composez vos propres menus et réduisez votre temps d’attente dans les restaurants.">
 
         <!-- Font Awesome-->
