--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <meta property="twitter:image" content="https://ohmyfood.xetaravel.com/images/logo/ohmyfood_color.png">
         <meta property="twitter:description" content="Composez vos propres menus et réduisez votre temps d’attente dans les restaurants.">
 
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+
         <!-- Font Awesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 
