Added the page la-palette-du-gout.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <h2 class="restaurants-title">Restaurants</h2>
 
                     <div class="restaurants-cards">
-                        <a class="card" href="#">
+                        <a class="card" href="./la-palette-du-gout.html">
                             <img class="card-image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                             <span class="card-news">Nouveau</span>
                             <div class="card-footer">
