--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div>
 
                         </a>
-                        <a class="card" href="#">
+                        <a class="card" href="./la-note-enchantee.html">
                             <img class="card-image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                             <span class="card-news">Nouveau</span>
                             <div class="card-footer">
