Added the page a-la-française.html

--- a/a-la-française.html
+++ b/a-la-française.html
@@ -6,13 +6,13 @@
 
         <!-- Meta -->
         <!-- Basic Meta-->
-        <title>La palette du goût - Ohmyfood !</title>
+        <title>À la française - Ohmyfood !</title>
         <meta name="description" content="Composez vos propres menus et réduisez votre temps d’attente dans les
         restaurants.">
         <meta name="author" content="Ohmyfood">
 
         <!-- Facebook Meta -->
-        <meta property="og:title" content="La palette du goût - Ohmyfood !">
+        <meta property="og:title" content="À la française - Ohmyfood !">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://ohmyfood.xetaravel.com">
         <meta property="og:description" content="Composez vos propres menus et réduisez votre temps d’attente dans les
@@ -22,7 +22,7 @@
         <!-- Twitter Meta -->
         <meta property="twitter:card" content="summary">
         <meta property="twitter:site" content="Ohmyfood">
-        <meta property="twitter:title" content="La palette du goût - Ohmyfood !">
+        <meta property="twitter:title" content="À la française - Ohmyfood !">
         <meta property="twitter:url" content="https://ohmyfood.xetaravel.com">
         <meta property="twitter:image" content="https://ohmyfood.xetaravel.com/images/logo/ohmyfood_color.png">
         <meta property="twitter:description" content="Composez vos propres menus et réduisez votre temps d’attente dans les restaurants.">
@@ -51,13 +51,13 @@
         <main>
             <section class="menu">
                 <div class="menu-container">
-                    <img class="menu-image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                    <img class="menu-image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                 </div>
             </section>
 
             <section class="menu-card">
                 <div class="menu-card-header">
-                    <h1 class="menu-card-title brand">La palette du goût</h1>
+                    <h1 class="menu-card-title brand">À la française</h1>
                     <div class="card-like">
                         <i class="card-like-regular far fa-heart"></i>
                         <i class="card-like-solid fas fa-heart"></i>
@@ -70,9 +70,9 @@
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-left delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Fricassée d'escargot</h3>
+                                    <h3 class="subcard-item-title">Tartare de poulpe acidulé</h3>
                                     <p class="subcard-item-description">
-                                        Au piment d'Espelette
+                                        Aux zestes d'orange
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">25€</div>
@@ -82,9 +82,9 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Foie gras de canard mi-cuit</h3>
+                                    <h3 class="subcard-item-title">Velouté de légumes d'antan</h3>
                                     <p class="subcard-item-description">
-                                        Et ses copeaux de truffe noire
+                                        Carotte, panais, topinambour
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">35€</div>
@@ -94,9 +94,9 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Oeuf au plat</h3>
+                                    <h3 class="subcard-item-title">Soupe à l'oignon</h3>
                                     <p class="subcard-item-description">
-                                        Assaisonné à la truffe sur lit de caviar
+                                        Revisitée
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">20€</div>
@@ -112,9 +112,9 @@
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-up delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Filet de boeuf aux herbes</h3>
+                                    <h3 class="subcard-item-title">Coquilles Saint-Jacques</h3>
                                     <p class="subcard-item-description">
-                                        Accompagné de sa ribambelle de légumes
+                                        Accompagnées d'une purée de panais
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">40€</div>
@@ -124,9 +124,9 @@
                             </li>
                             <li class="subcard-item pulse  delay-5">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Parmentier de queue de boeuf</h3>
+                                    <h3 class="subcard-item-title">Magret de canard</h3>
                                     <p class="subcard-item-description">
-                                        À la truffe noire sur sa purée de panais
+                                        Et parmentier de pommes de terre
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">35€</div>
@@ -136,9 +136,9 @@
                             </li>
                             <li class="subcard-item bounce-in-down delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Filet de turbot</h3>
+                                    <h3 class="subcard-item-title">Pigeonneau d’Ille-et-Vilaine</h3>
                                     <p class="subcard-item-description">
-                                        Aux agrumes
+                                        Sur son lit de gnocchis aux légumes
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">44€</div>
@@ -154,9 +154,9 @@
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-right delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Paris-Brest</h3>
+                                    <h3 class="subcard-item-title">Pétales de violettes glacés</h3>
                                     <p class="subcard-item-description">
-                                        Revisité
+                                        Et purée de noisettes
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">18€</div>
@@ -166,9 +166,9 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Macaron au chocolat d'exception</h3>
+                                    <h3 class="subcard-item-title">Fondant au chocolat</h3>
                                     <p class="subcard-item-description">
-                                        Et glace à la vanille de Madagascar
+                                        Revisité
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">22€</div>
@@ -178,9 +178,9 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Mousse au chocolat</h3>
+                                    <h3 class="subcard-item-title">Millefeuille croustillant</h3>
                                     <p class="subcard-item-description">
-                                        Au piment d'Espelette et à la truffe noire
+                                        Myrtilles et pâte d’amande
                                     </p>
                                 </div>
                                 <div class="subcard-item-price">23€</div>
