Added the page le-delice-des-sens.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             </div>
 
                         </a>
-                        <a class="card" href="#">
+                        <a class="card" href="./a-la-française.html">
                             <img class="card-image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                             <div class="card-footer">
                                 <div class="card-infos">
@@ -135,7 +135,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="card" href="#">
+                        <a class="card" href="./le-delice-des-sens.html">
                             <img class="card-image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                             <div class="card-footer">
                                 <div class="card-infos">
