Fixed titles balises to pass HTML validator

--- a/a-la-française.html
+++ b/a-la-française.html
@@ -49,15 +49,15 @@
         </header>
 
         <main>
-            <section class="menu">
+            <div class="menu">
                 <div class="menu-container">
                     <img class="menu-image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                 </div>
-            </section>
+            </div>
 
             <section class="menu-card">
                 <div class="menu-card-header">
-                    <h1 class="menu-card-title brand">À la française</h1>
+                    <h2 class="menu-card-title brand">À la française</h2>
                     <div class="card-like">
                         <i class="card-like-regular far fa-heart"></i>
                         <i class="card-like-solid fas fa-heart"></i>
@@ -66,11 +66,11 @@
 
                 <div class="subcards">
                     <div class="subcard">
-                        <h2 class="subcard-title">Entrées</h2>
+                        <h3 class="subcard-title">Entrées</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-left delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Tartare de poulpe acidulé</h3>
+                                    <h4 class="subcard-item-title">Tartare de poulpe acidulé</h4>
                                     <p class="subcard-item-description">
                                         Aux zestes d'orange
                                     </p>
@@ -82,7 +82,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Velouté de légumes d'antan</h3>
+                                    <h4 class="subcard-item-title">Velouté de légumes d'antan</h4>
                                     <p class="subcard-item-description">
                                         Carotte, panais, topinambour
                                     </p>
@@ -94,7 +94,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Soupe à l'oignon</h3>
+                                    <h4 class="subcard-item-title">Soupe à l'oignon</h4>
                                     <p class="subcard-item-description">
                                         Revisitée
                                     </p>
@@ -108,11 +108,11 @@
                     </div>
 
                     <div class="subcard">
-                        <h2 class="subcard-title">Plats</h2>
+                        <h3 class="subcard-title">Plats</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-up delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Coquilles Saint-Jacques</h3>
+                                    <h4 class="subcard-item-title">Coquilles Saint-Jacques</h4>
                                     <p class="subcard-item-description">
                                         Accompagnées d'une purée de panais
                                     </p>
@@ -124,7 +124,7 @@
                             </li>
                             <li class="subcard-item pulse  delay-5">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Magret de canard</h3>
+                                    <h4 class="subcard-item-title">Magret de canard</h4>
                                     <p class="subcard-item-description">
                                         Et parmentier de pommes de terre
                                     </p>
@@ -136,7 +136,7 @@
                             </li>
                             <li class="subcard-item bounce-in-down delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Pigeonneau d’Ille-et-Vilaine</h3>
+                                    <h4 class="subcard-item-title">Pigeonneau d’Ille-et-Vilaine</h4>
                                     <p class="subcard-item-description">
                                         Sur son lit de gnocchis aux légumes
                                     </p>
@@ -150,11 +150,11 @@
                     </div>
 
                     <div class="subcard">
-                        <h2 class="subcard-title">Desserts</h2>
+                        <h3 class="subcard-title">Desserts</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-right delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Pétales de violettes glacés</h3>
+                                    <h4 class="subcard-item-title">Pétales de violettes glacés</h4>
                                     <p class="subcard-item-description">
                                         Et purée de noisettes
                                     </p>
@@ -166,7 +166,7 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Fondant au chocolat</h3>
+                                    <h4 class="subcard-item-title">Fondant au chocolat</h4>
                                     <p class="subcard-item-description">
                                         Revisité
                                     </p>
@@ -178,7 +178,7 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Millefeuille croustillant</h3>
+                                    <h4 class="subcard-item-title">Millefeuille croustillant</h4>
                                     <p class="subcard-item-description">
                                         Myrtilles et pâte d’amande
                                     </p>
