--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </header>
 
         <main>
-            <section class="localization">
+            <div class="localization">
                 <i class="localization-icon fas fa-map-marker-alt"></i> Paris, Belleville
-            </section>
+            </div>
 
             <section class="infos">
                 <h2 class="infos-title">Réservez le menu qui vous convient</h2>
