--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -49,15 +49,15 @@
         </header>
 
         <main>
-            <section class="menu">
+            <div class="menu">
                 <div class="menu-container">
                     <img class="menu-image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                 </div>
-            </section>
+            </div>
 
             <section class="menu-card">
                 <div class="menu-card-header">
-                    <h1 class="menu-card-title brand">La palette du goût</h1>
+                    <h2 class="menu-card-title brand">La palette du goût</h2>
                     <div class="card-like">
                         <i class="card-like-regular far fa-heart"></i>
                         <i class="card-like-solid fas fa-heart"></i>
@@ -66,11 +66,11 @@
 
                 <div class="subcards">
                     <div class="subcard">
-                        <h2 class="subcard-title">Entrées</h2>
+                        <h3 class="subcard-title">Entrées</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-left delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Fricassée d'escargot</h3>
+                                    <h4 class="subcard-item-title">Fricassée d'escargot</h4>
                                     <p class="subcard-item-description">
                                         Au piment d'Espelette
                                     </p>
@@ -82,7 +82,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Foie gras de canard mi-cuit</h3>
+                                    <h4 class="subcard-item-title">Foie gras de canard mi-cuit</h4>
                                     <p class="subcard-item-description">
                                         Et ses copeaux de truffe noire
                                     </p>
@@ -94,7 +94,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Oeuf au plat</h3>
+                                    <h4 class="subcard-item-title">Oeuf au plat</h4>
                                     <p class="subcard-item-description">
                                         Assaisonné à la truffe sur lit de caviar
                                     </p>
@@ -108,11 +108,11 @@
                     </div>
 
                     <div class="subcard">
-                        <h2 class="subcard-title">Plats</h2>
+                        <h3 class="subcard-title">Plats</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-up delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Filet de boeuf aux herbes</h3>
+                                    <h4 class="subcard-item-title">Filet de boeuf aux herbes</h4>
                                     <p class="subcard-item-description">
                                         Accompagné de sa ribambelle de légumes
                                     </p>
@@ -124,7 +124,7 @@
                             </li>
                             <li class="subcard-item pulse  delay-5">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Parmentier de queue de boeuf</h3>
+                                    <h4 class="subcard-item-title">Parmentier de queue de boeuf</h4>
                                     <p class="subcard-item-description">
                                         À la truffe noire sur sa purée de panais
                                     </p>
@@ -136,7 +136,7 @@
                             </li>
                             <li class="subcard-item bounce-in-down delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Filet de turbot</h3>
+                                    <h4 class="subcard-item-title">Filet de turbot</h4>
                                     <p class="subcard-item-description">
                                         Aux agrumes
                                     </p>
@@ -150,11 +150,11 @@
                     </div>
 
                     <div class="subcard">
-                        <h2 class="subcard-title">Desserts</h2>
+                        <h3 class="subcard-title">Desserts</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-right delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Paris-Brest</h3>
+                                    <h4 class="subcard-item-title">Paris-Brest</h4>
                                     <p class="subcard-item-description">
                                         Revisité
                                     </p>
@@ -166,7 +166,7 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Macaron au chocolat d'exception</h3>
+                                    <h4 class="subcard-item-title">Macaron au chocolat d'exception</h4>
                                     <p class="subcard-item-description">
                                         Et glace à la vanille de Madagascar
                                     </p>
@@ -178,7 +178,7 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Mousse au chocolat</h3>
+                                    <h4 class="subcard-item-title">Mousse au chocolat</h4>
                                     <p class="subcard-item-description">
                                         Au piment d'Espelette et à la truffe noire
                                     </p>
