--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -49,15 +49,15 @@
         </header>
 
         <main>
-            <section class="menu">
+            <div class="menu">
                 <div class="menu-container">
                     <img class="menu-image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                 </div>
-            </section>
+            </div>
 
             <section class="menu-card">
                 <div class="menu-card-header">
-                    <h1 class="menu-card-title brand">La note enchantée</h1>
+                    <h2 class="menu-card-title brand">La note enchantée</h2>
                     <div class="card-like">
                         <i class="card-like-regular far fa-heart"></i>
                         <i class="card-like-solid fas fa-heart"></i>
@@ -66,11 +66,11 @@
 
                 <div class="subcards">
                     <div class="subcard">
-                        <h2 class="subcard-title">Entrées</h2>
+                        <h3 class="subcard-title">Entrées</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-left delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Ravioles de foie gras</h3>
+                                    <h4 class="subcard-item-title">Ravioles de foie gras</h4>
                                     <p class="subcard-item-description">
                                         Accompagnés de leur crème à la truffe
                                     </p>
@@ -82,7 +82,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Caviar osciètre</h3>
+                                    <h4 class="subcard-item-title">Caviar osciètre</h4>
                                     <p class="subcard-item-description">
                                         Sur blini à la farine de blé noir
                                     </p>
@@ -94,7 +94,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Homard et espuma de potiron</h3>
+                                    <h4 class="subcard-item-title">Homard et espuma de potiron</h4>
                                     <p class="subcard-item-description">
                                         Mariné aux zestes d'orange
                                     </p>
@@ -106,7 +106,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Foie gras de canard cuit entier</h3>
+                                    <h4 class="subcard-item-title">Foie gras de canard cuit entier</h4>
                                     <p class="subcard-item-description">
                                         Confiture de figue et pain toasté
                                     </p>
@@ -120,11 +120,11 @@
                     </div>
 
                     <div class="subcard">
-                        <h2 class="subcard-title">Plats</h2>
+                        <h3 class="subcard-title">Plats</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-up delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Noix de coquilles Saint-Jacques</h3>
+                                    <h4 class="subcard-item-title">Noix de coquilles Saint-Jacques</h4>
                                     <p class="subcard-item-description">
                                         Sur lit de purée de céleri-rave
                                     </p>
@@ -136,7 +136,7 @@
                             </li>
                             <li class="subcard-item pulse  delay-5">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Langoustine poêlée</h3>
+                                    <h4 class="subcard-item-title">Langoustine poêlée</h4>
                                     <p class="subcard-item-description">
                                         Purée de patate douce
                                     </p>
@@ -148,7 +148,7 @@
                             </li>
                             <li class="subcard-item bounce-in-down delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Mijoté de queue de boeuf </h3>
+                                    <h4 class="subcard-item-title">Mijoté de queue de boeuf </h4>
                                     <p class="subcard-item-description">
                                         Et riz sauvage aux zestes de citron
                                     </p>
@@ -162,11 +162,11 @@
                     </div>
 
                     <div class="subcard">
-                        <h2 class="subcard-title">Desserts</h2>
+                        <h3 class="subcard-title">Desserts</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-right delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Macaron noisette et chocolat</h3>
+                                    <h4 class="subcard-item-title">Macaron noisette et chocolat</h4>
                                     <p class="subcard-item-description">
                                         Glace au caramel brun et sel de Guérande
                                     </p>
@@ -178,7 +178,7 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Baba au rhum revisité </h3>
+                                    <h4 class="subcard-item-title">Baba au rhum revisité </h4>
                                     <p class="subcard-item-description">
                                         Avec son coulis de citron
                                     </p>
@@ -190,7 +190,7 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Tarte au citron meringuée </h3>
+                                    <h4 class="subcard-item-title">Tarte au citron meringuée </h4>
                                     <p class="subcard-item-description">
                                         Déstructurée
                                     </p>
