--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -49,15 +49,15 @@
         </header>
 
         <main>
-            <section class="menu">
+            <div class="menu">
                 <div class="menu-container">
                     <img class="menu-image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                 </div>
-            </section>
+            </div>
 
             <section class="menu-card">
                 <div class="menu-card-header">
-                    <h1 class="menu-card-title brand">Le délice des sens</h1>
+                    <h2 class="menu-card-title brand">Le délice des sens</h2>
                     <div class="card-like">
                         <i class="card-like-regular far fa-heart"></i>
                         <i class="card-like-solid fas fa-heart"></i>
@@ -66,11 +66,11 @@
 
                 <div class="subcards">
                     <div class="subcard">
-                        <h2 class="subcard-title">Entrées</h2>
+                        <h3 class="subcard-title">Entrées</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-left delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Tartare de thon</h3>
+                                    <h4 class="subcard-item-title">Tartare de thon</h4>
                                     <p class="subcard-item-description">
                                         Assaisonné au yuzu
                                     </p>
@@ -82,7 +82,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Bouchée de homard croustillant</h3>
+                                    <h4 class="subcard-item-title">Bouchée de homard croustillant</h4>
                                     <p class="subcard-item-description">
                                         Et sa farandole de petits légumes
                                     </p>
@@ -94,7 +94,7 @@
                             </li>
                             <li class="subcard-item bounce-in-left delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Velouté de cèpes </h3>
+                                    <h4 class="subcard-item-title">Velouté de cèpes </h4>
                                     <p class="subcard-item-description">
                                         Aux truffes
                                     </p>
@@ -108,11 +108,11 @@
                     </div>
 
                     <div class="subcard">
-                        <h2 class="subcard-title">Plats</h2>
+                        <h3 class="subcard-title">Plats</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-up delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Poulet rôti aux herbes de Provence</h3>
+                                    <h4 class="subcard-item-title">Poulet rôti aux herbes de Provence</h4>
                                     <p class="subcard-item-description">
                                         Et sa crème de truffe
                                     </p>
@@ -124,7 +124,7 @@
                             </li>
                             <li class="subcard-item pulse  delay-5">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Langouste rôtie</h3>
+                                    <h4 class="subcard-item-title">Langouste rôtie</h4>
                                     <p class="subcard-item-description">
                                         Et ses légumes de saison
                                     </p>
@@ -136,7 +136,7 @@
                             </li>
                             <li class="subcard-item bounce-in-down delay-4">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Côte de boeuf Angus</h3>
+                                    <h4 class="subcard-item-title">Côte de boeuf Angus</h4>
                                     <p class="subcard-item-description">
                                         Et sa purée de panais
                                     </p>
@@ -150,11 +150,11 @@
                     </div>
 
                     <div class="subcard">
-                        <h2 class="subcard-title">Desserts</h2>
+                        <h3 class="subcard-title">Desserts</h3>
                         <ul class="subcard-items">
                             <li class="subcard-item bounce-in-right delay-1">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Farandole de desserts</h3>
+                                    <h4 class="subcard-item-title">Farandole de desserts</h4>
                                     <p class="subcard-item-description">
                                         Du chef
                                     </p>
@@ -166,7 +166,7 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-2">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Crème brulée</h3>
+                                    <h4 class="subcard-item-title">Crème brulée</h4>
                                     <p class="subcard-item-description">
                                         Revisitée
                                     </p>
@@ -178,7 +178,7 @@
                             </li>
                             <li class="subcard-item bounce-in-right delay-3">
                                 <div class="subcard-item-infos">
-                                    <h3 class="subcard-item-title">Tiramisu</h3>
+                                    <h4 class="subcard-item-title">Tiramisu</h4>
                                     <p class="subcard-item-description">
                                         À la noisette
                                     </p>
